Config now used for credentials and server info.

--- a/config.json
+++ b/config.json
@@ -5,7 +5,8 @@
                 "couchbase": {
                     "all": {
                         "api_url": "http://localhost:32777/pools/default/buckets/travel-sample/stats",
-			 "mysql_use_innodb": true
+			"username": "admin",
+			"password": "password",
                     }
                 }
             }
