Couchbase api call functions are interfaces.

--- a/mock-file.yaml
+++ b/mock-file.yaml
@@ -7,7 +7,7 @@
   workflow: 
     collect: 
       metrics: 
-        /intel/couchbase/*: {}
+        /staples/couchbase/couch_total_disk_size: {}
       config: 
       process: 
         - 
