--- a/config.json
+++ b/config.json
@@ -4,10 +4,10 @@
             "collector": {
                 "couchbase": {
                     "all": {
-                        "api_url": "http://localhost:32777/pools/default/buckets/",
+                        "api_url": "http://lezqdndbv75.staples.com:8091/pools/default/buckets/",
 			"username": "admin",
 			"password": "password",
-                    }
+		    }
                 }
             }
         }
