--- a/examples/tasks/mock-file.yaml
+++ b/examples/tasks/mock-file.yaml
@@ -7,7 +7,7 @@
   workflow: 
     collect: 
       metrics: 
-        /staples/couchbase/travel-sample/couch_total_disk_size: {}
+        /staples/couchbase/*: {}
       config: 
       process: 
         - 
